Log 19/01/19g - Guergiev get_test_error fct

--- a/workspace_guergiev.ipynb
+++ b/workspace_guergiev.ipynb
@@ -68,42 +68,7 @@
     "    * f_phase: Forward phase\n",
     "    * t_phase: Target phase\n",
     "    * train: Loop over epochs and loop over all examples\n",
-    "    * test_weights\n",
-    "    * save_weights\n",
-    "    \n",
-    "* **Layer Module**\n",
-    "\n",
-    "    * Init\n",
-    "    * spike\n",
-    "    \n",
-    "* **hiddenLayer**\n",
-    "    \n",
-    "    * Init\n",
-    "    * create_integration_vars\n",
-    "    * clear_vars\n",
-    "    * update_W\n",
-    "    * update_Y\n",
-    "    * update_A\n",
-    "    * update_B\n",
-    "    * update_C\n",
-    "    * out_f\n",
-    "    * out_t\n",
-    "    * plateau_f\n",
-    "    * plateau_t\n",
-    "    * calc_averages\n",
-    "    \n",
-    "* **finalLayer**\n",
-    "\n",
-    "    * Init\n",
-    "    * create_integration_vars\n",
-    "    * clear_vars \n",
-    "    * update_W  \n",
-    "    * update_B\n",
-    "    * update_I\n",
-    "    * update_C\n",
-    "    * out_f\n",
-    "    * out_t\n",
-    "    * calc_averages"
+    "    * test_weights"
    ]
   },
   {
@@ -166,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,11 +158,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train| epoch  1| batch 5000/47995| acc: 0.8768| loss: 3.2170| time: 18.12\n",
-      "Valid| epoch  1| batch 5000/47995| acc: 0.8722| loss: 3.3542| time: 18.12\n",
+      "Train| epoch  1| batch 5000/47995| acc: 0.8191| loss: 4.0337| time: 63.20\n",
+      "Valid| epoch  1| batch 5000/47995| acc: 0.8198| loss: 4.0337| time: 12.09\n",
       "-------------------------------------------------------------------------\n",
-      "Train| epoch  1| batch 10000/47995| acc: 0.8534| loss: 3.1922| time: 12.71\n",
-      "Valid| epoch  1| batch 10000/47995| acc: 0.8489| loss: 3.2730| time: 12.71\n",
+      "Train| epoch  1| batch 10000/47995| acc: 0.8914| loss: 2.8728| time: 62.44\n",
+      "Valid| epoch  1| batch 10000/47995| acc: 0.8852| loss: 3.0213| time: 10.66\n",
       "-------------------------------------------------------------------------\n"
      ]
     },
@@ -213,11 +178,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train| epoch  1| batch 15000/47995| acc: 0.8928| loss: 2.6360| time: 12.01\n",
-      "Valid| epoch  1| batch 15000/47995| acc: 0.8933| loss: 2.6416| time: 12.01\n",
+      "Train| epoch  1| batch 15000/47995| acc: 0.8886| loss: 2.7832| time: 58.59\n",
+      "Valid| epoch  1| batch 15000/47995| acc: 0.8874| loss: 2.8413| time: 10.34\n",
       "-------------------------------------------------------------------------\n",
-      "Train| epoch  1| batch 20000/47995| acc: 0.9254| loss: 1.9417| time: 11.20\n",
-      "Valid| epoch  1| batch 20000/47995| acc: 0.9213| loss: 2.0449| time: 11.20\n",
+      "Train| epoch  1| batch 20000/47995| acc: 0.8946| loss: 2.5731| time: 60.13\n",
+      "Valid| epoch  1| batch 20000/47995| acc: 0.8946| loss: 2.5976| time: 9.19\n",
+      "-------------------------------------------------------------------------\n",
+      "Train| epoch  1| batch 25000/47995| acc: 0.9018| loss: 2.5129| time: 54.89\n",
+      "Valid| epoch  1| batch 25000/47995| acc: 0.8990| loss: 2.5437| time: 15.76\n",
+      "-------------------------------------------------------------------------\n",
+      "Train| epoch  1| batch 30000/47995| acc: 0.9237| loss: 2.0283| time: 51.60\n",
+      "Valid| epoch  1| batch 30000/47995| acc: 0.9184| loss: 2.1685| time: 8.96\n",
+      "-------------------------------------------------------------------------\n",
+      "Train| epoch  1| batch 35000/47995| acc: 0.9322| loss: 1.6569| time: 46.04\n",
+      "Valid| epoch  1| batch 35000/47995| acc: 0.9293| loss: 1.7481| time: 9.69\n",
+      "-------------------------------------------------------------------------\n",
+      "Train| epoch  1| batch 40000/47995| acc: 0.9248| loss: 1.9424| time: 47.04\n",
+      "Valid| epoch  1| batch 40000/47995| acc: 0.9197| loss: 2.0843| time: 8.88\n",
+      "-------------------------------------------------------------------------\n",
+      "Train| epoch  1| batch 45000/47995| acc: 0.9128| loss: 2.2463| time: 52.69\n",
+      "Valid| epoch  1| batch 45000/47995| acc: 0.9091| loss: 2.3605| time: 9.71\n",
+      "-------------------------------------------------------------------------\n",
+      "Train| epoch  2| batch 5000/47995| acc: 0.9445| loss: 1.3440| time: 57.52\n",
+      "Valid| epoch  2| batch 5000/47995| acc: 0.9411| loss: 1.4414| time: 10.33\n",
       "-------------------------------------------------------------------------\n"
      ]
     }
@@ -232,21 +215,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from utils.helpers import prep_data_guergiev"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_test, y_test = prep_data_guergiev(X_test, y_test)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "net.get_test_error(X_test, y_test)"
+   ]
   }
  ],
  "metadata": {
