Log 20/01/19b - Learning Dynamics Plot

--- a/workspace_dnn.ipynb
+++ b/workspace_dnn.ipynb
@@ -778,8 +778,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train Full Models (10 Epochs, Logging every 5000 eps and all Data)\n",
-    "- Obtain Learning Performance and Weight Change Logs"
+    "### Train Full Models (10 Epochs, Logging every 5000 eps and all Data)"
    ]
   },
   {
