--- a/workspace_guergiev.ipynb
+++ b/workspace_guergiev.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,15 +126,7 @@
     "X_train, X_test, y_train, y_test = train_test_split(X_mnist, y_mnist,\n",
     "                                                    stratify=y_mnist,\n",
     "                                                    random_state=0,\n",
-    "                                                    test_size=1./7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                                                    test_size=1./7)\n",
     "# silence 80% of feedback weights\n",
     "cdl.use_sparse_feedback = False\n",
     "\n",
@@ -452,24 +444,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.helpers import prep_data_guergiev"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test, y_test = prep_data_guergiev(X_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [
@@ -485,42 +459,8 @@
     }
    ],
    "source": [
+    "X_test, y_test = prep_data_guergiev(X_test, y_test)\n",
     "net.get_test_error(X_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fashion-MNIST dataset\n",
-    "X_fashion, y_fashion = get_data(num_samples=70000, dataset=\"fashion\")\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_fashion, y_fashion,\n",
-    "                                                    stratify=y_fashion,\n",
-    "                                                    random_state=0,\n",
-    "                                                    test_size=1./7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# silence 80% of feedback weights\n",
-    "cdl.use_sparse_feedback = False\n",
-    "\n",
-    "# set training parameters\n",
-    "f_etas = (0.21, 0.21)\n",
-    "b_etas = None\n",
-    "n_epochs = 10\n",
-    "n_training_examples = X_train.shape[1]\n",
-    "\n",
-    "n=(500, 10)\n",
-    "# create the network -- this will also load the MNIST dataset files\n",
-    "net = cdl.Network(n, X_train, y_train)"
    ]
   },
   {
@@ -820,31 +760,13 @@
     }
    ],
    "source": [
-    "net.train(f_etas, b_etas, n_epochs,\n",
-    "          log_freq=5000, verbose=True, logging=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# CIFAR-10 dataset\n",
-    "X_cifar10, y_cifar10 = get_data(num_samples=70000, dataset=\"cifar10\")\n",
+    "# Fashion-MNIST dataset\n",
+    "X_fashion, y_fashion = get_data(num_samples=70000, dataset=\"fashion\")\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_cifar10, y_cifar10,\n",
-    "                                                    stratify=y_cifar10,\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_fashion, y_fashion,\n",
+    "                                                    stratify=y_fashion,\n",
     "                                                    random_state=0,\n",
-    "                                                    test_size=1./7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                                                    test_size=1./7)\n",
     "# silence 80% of feedback weights\n",
     "cdl.use_sparse_feedback = False\n",
     "\n",
@@ -856,7 +778,10 @@
     "\n",
     "n=(500, 10)\n",
     "# create the network -- this will also load the MNIST dataset files\n",
-    "net = cdl.Network(n, X_train, y_train)"
+    "net = cdl.Network(n, X_train, y_train)\n",
+    "\n",
+    "net.train(f_etas, b_etas, n_epochs,\n",
+    "          log_freq=5000, verbose=True, logging=True)"
    ]
   },
   {
@@ -1126,6 +1051,26 @@
     }
    ],
    "source": [
+    "# CIFAR-10 dataset\n",
+    "X_cifar10, y_cifar10 = get_data(num_samples=70000, dataset=\"cifar10\")\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_cifar10, y_cifar10,\n",
+    "                                                    stratify=y_cifar10,\n",
+    "                                                    random_state=0,\n",
+    "                                                    test_size=1./7)\n",
+    "\n",
+    "# silence 80% of feedback weights\n",
+    "cdl.use_sparse_feedback = False\n",
+    "\n",
+    "# set training parameters\n",
+    "f_etas = (0.21, 0.21)\n",
+    "b_etas = None\n",
+    "n_epochs = 10\n",
+    "n_training_examples = X_train.shape[1]\n",
+    "\n",
+    "n=(500, 10)\n",
+    "net = cdl.Network(n, X_train, y_train)\n",
+    "\n",
     "net.train(f_etas, b_etas, n_epochs,\n",
     "          log_freq=5000, verbose=True, logging=True)"
    ]
